// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Alert Inline Variant applies inline styling when inline={true} 1`] = `
<div
  aria-live="polite"
  class="sc-3107d7e0-0 ezHGIt"
  data-testid="inline-alert"
  role="status"
>
  <div
    aria-hidden="true"
    class="sc-3107d7e0-1 kpgMUo"
  >
    <span
      class="sc-b3647ff8-0 kGHhZE"
    >
      <svg
        aria-label="info"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12ZM22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z M12.5 7.5C12.5 7.77614 12.2761 8 12 8C11.7239 8 11.5 7.77614 11.5 7.5C11.5 7.22386 11.7239 7 12 7C12.2761 7 12.5 7.22386 12.5 7.5Z M11 7.5C11 6.94772 11.4477 6.5 12 6.5C12.5523 6.5 13 6.94772 13 7.5C13 8.05228 12.5523 8.5 12 8.5C11.4477 8.5 11 8.05228 11 7.5Z M13 10V17H11V10H13Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="sc-3107d7e0-2 fvTpgK"
  >
    <span
      class="sc-3107d7e0-4 fUppXx"
    >
      This is an alert message
    </span>
  </div>
</div>
`;

exports[`Alert Variant Props renders error variant correctly 1`] = `
<div
  aria-live="polite"
  class="sc-3107d7e0-0 ewScqK"
  data-testid="alert-error"
  role="alert"
>
  <div
    aria-hidden="true"
    class="sc-3107d7e0-1 kpgMUo"
  >
    <span
      class="sc-b3647ff8-0 dvSRBY"
    >
      <svg
        aria-label="crossCircle"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12ZM22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z M14.293 8.2925L15.7073 9.70672L9.7072 15.7068L8.29299 14.2926L14.293 8.2925Z M9.70706 8.29284L8.29284 9.70706L14.2929 15.7071L15.7071 14.2929L9.70706 8.29284Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="sc-3107d7e0-2 fvTpgK"
  >
    <span
      class="sc-3107d7e0-4 fUppXx"
    >
      This is an alert message
    </span>
  </div>
</div>
`;

exports[`Alert Variant Props renders info variant correctly 1`] = `
<div
  aria-live="polite"
  class="sc-3107d7e0-0 jjMACa"
  data-testid="alert-info"
  role="status"
>
  <div
    aria-hidden="true"
    class="sc-3107d7e0-1 kpgMUo"
  >
    <span
      class="sc-b3647ff8-0 kGHhZE"
    >
      <svg
        aria-label="info"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12ZM22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z M12.5 7.5C12.5 7.77614 12.2761 8 12 8C11.7239 8 11.5 7.77614 11.5 7.5C11.5 7.22386 11.7239 7 12 7C12.2761 7 12.5 7.22386 12.5 7.5Z M11 7.5C11 6.94772 11.4477 6.5 12 6.5C12.5523 6.5 13 6.94772 13 7.5C13 8.05228 12.5523 8.5 12 8.5C11.4477 8.5 11 8.05228 11 7.5Z M13 10V17H11V10H13Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="sc-3107d7e0-2 fvTpgK"
  >
    <span
      class="sc-3107d7e0-4 fUppXx"
    >
      This is an alert message
    </span>
  </div>
</div>
`;

exports[`Alert Variant Props renders success variant correctly 1`] = `
<div
  aria-live="polite"
  class="sc-3107d7e0-0 eiVEqC"
  data-testid="alert-success"
  role="status"
>
  <div
    aria-hidden="true"
    class="sc-3107d7e0-1 kpgMUo"
  >
    <span
      class="sc-b3647ff8-0 eozyQc"
    >
      <svg
        aria-label="checkRing"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12ZM22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z M11.0674 16.4814L7.29297 12.707L8.70703 11.293L10.9326 13.5176L15.2314 8.35937L16.7686 9.64062L11.0674 16.4814Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="sc-3107d7e0-2 fvTpgK"
  >
    <span
      class="sc-3107d7e0-4 fUppXx"
    >
      This is an alert message
    </span>
  </div>
</div>
`;

exports[`Alert Variant Props renders warning variant correctly 1`] = `
<div
  aria-live="polite"
  class="sc-3107d7e0-0 RXDIF"
  data-testid="alert-warning"
  role="status"
>
  <div
    aria-hidden="true"
    class="sc-3107d7e0-1 kpgMUo"
  >
    <span
      class="sc-b3647ff8-0 kjovUa"
    >
      <svg
        aria-label="bell"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM15.707 9.70703L13.4141 12L15.707 14.293L14.293 15.707L12 13.4141L9.70703 15.707L8.29297 14.293L10.5859 12L8.29297 9.70703L9.70703 8.29297L12 10.5859L14.293 8.29297L15.707 9.70703Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="sc-3107d7e0-2 fvTpgK"
  >
    <span
      class="sc-3107d7e0-4 fUppXx"
    >
      This is an alert message
    </span>
  </div>
</div>
`;
